[tool.poetry]
name = "my-utils"
version = "0.1.0"
description = ""
authors = ["Paul Maltsev <paul@offerfit.ai>"]
readme = "README.md"
packages = [{include = "my_utils"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
